add debug heights and bg colors to primary sections

--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!-- Style  -->
     <link rel="stylesheet" href="./style.css">
-
 </head>
-<body>
-    
+
+<body class="debug">
+    <header id="site_header" class="dark_blue_bg"></header>
+
+    <main id="site_main">
+        <section class="start turquoise_bg"></section>
+        <section class="portfolio"></section>
+        <section class="about turquoise_bg"></section>
+        <section class="contact"></section>
+    </main>
+
+    <footer id="site_footer">
+        <section class="info blue_bg"></section>
+        <section class="copyright dark_blue_bg"></section>
+    </footer>
 </body>
+
 </html>
