add content blocks inside sections

--- a/index.html
+++ b/index.html
@@ -12,11 +12,37 @@
 </head>
 
 <body class="debug">
-    <header id="site_header" class="dark_blue_bg"></header>
+    <header id="site_header" class="dark_blue_bg">
+        <div class="container">
+            <div class="row navbar">
+                <div class="col-4"></div>
+                <div class="col-1"></div>
+            </div>
+        </div>
+    </header>
 
     <main id="site_main">
-        <section class="start turquoise_bg"></section>
-        <section class="portfolio"></section>
+        <section class="start turquoise_bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                </div>
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+        </section>
         <section class="about turquoise_bg"></section>
         <section class="contact"></section>
     </main>
