add content to remaining sections

--- a/index.html
+++ b/index.html
@@ -43,13 +43,44 @@
                 </div>
             </div>
         </section>
-        <section class="about turquoise_bg"></section>
-        <section class="contact"></section>
+        <section class="about turquoise_bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"></div>
+                    <div class="col-6"></div>
+                    <div class="col-6"></div>
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"></div>
+                    <div class="col-12"></div>
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="site_footer">
-        <section class="info blue_bg"></section>
-        <section class="copyright dark_blue_bg"></section>
+        <section class="info blue_bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+        </section>
+        <section class="copyright dark_blue_bg">
+            <div class="container ">
+                <div class="row">
+                    Copyright
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 
