fix responsive behaviour using bootstrap

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body class="debug">
     <header id="site_header" class="dark_blue_bg">
-        <div class="container">
-            <div class="row navbar">
+        <nav class="container">
+            <div class="navbar">
                 <div class="col-4"></div>
                 <div class="col-1"></div>
             </div>
-        </div>
+        </nav>
     </header>
 
     <main id="site_main">
@@ -32,14 +32,12 @@
         <section class="portfolio">
             <div class="container">
                 <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                </div>
-                <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col-12 col-md-6 col-lg-4"></div>
                 </div>
             </div>
         </section>
@@ -47,8 +45,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12"></div>
-                    <div class="col-6"></div>
-                    <div class="col-6"></div>
+                    <div class="col-12 col-md-6"></div>
+                    <div class="col-12 col-md-6"></div>
                     <div class="col-12"></div>
                 </div>
             </div>
@@ -68,9 +66,9 @@
         <section class="info blue_bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    <div class="col-12 col-md-4"></div>
+                    <div class="col-12 col-md-4"></div>
+                    <div class="col-12 col-md-4"></div>
                 </div>
             </div>
         </section>
