--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
 </head>
 
 <body class="debug">
-    <header id="site_header" class="dark_blue_bg">
-        <nav class="container">
-            <div class="navbar">
-                <div class="col-4"></div>
-                <div class="col-1"></div>
-            </div>
+    <header id="site_header">
+        <nav class="navbar dark_blue_bg">
+            <div class="col-4"></div>
+            <div class="col-1"></div>
         </nav>
-    </header>
 
-    <main id="site_main">
         <section class="start turquoise_bg">
             <div class="container">
                 <div class="row">
@@ -29,15 +25,24 @@
                 </div>
             </div>
         </section>
+    </header>
+
+    <main id="site_main">
+    
         <section class="portfolio">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
-                    <div class="col-12 col-md-6 col-lg-4"></div>
+                    <div class="col title">
+                        Portfolio
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
                 </div>
             </div>
         </section>
@@ -74,7 +79,7 @@
         </section>
         <section class="copyright dark_blue_bg">
             <div class="container ">
-                <div class="row">
+                <div class="row justify-content-center align-items-center">
                     Copyright
                 </div>
             </div>
