--- a/index.html
+++ b/index.html
@@ -11,12 +11,31 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="debug">
+<body class="">
     <header id="site_header">
-        <nav class="navbar dark_blue_bg">
-            <div class="col-4"></div>
-            <div class="col-1"></div>
-        </nav>
+        <!-- NAVBAR -->
+        <nav class="navbar py-3 navbar-expand-lg navbar-dark dark_blue_bg">
+            <div class="container">
+              <a class="navbar-brand b4-color" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
+          </nav>
 
         <section class="start turquoise_bg">
             <div class="container">
