--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                 </ul>
-
               </div>
             </div>
           </nav>
 
-        <section class="start turquoise_bg">
+        <section class="jumbotron turquoise_bg">
             <div class="container">
-                <div class="row">
-                    <div class="col"></div>
+                <div class="row justify-content-center">
+                    <div class="col-4">
+                        <div class="row justify-content-center">
+                            <img src="./img/avatar.svg" alt="avatar" class="avatar">
+                        </div>
+
+                        <div class="text-center">
+                            <div>START BOOTSTRAP</div>
+                            <div class="splitter"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
