--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Bootstrap freelancer</title>
     <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style  -->
     <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body class="">
@@ -37,16 +40,21 @@
           </nav>
 
         <section class="jumbotron turquoise_bg">
-            <div class="container">
+            <div class="container py-5">
                 <div class="row justify-content-center">
                     <div class="col-4">
                         <div class="row justify-content-center">
                             <img src="./img/avatar.svg" alt="avatar" class="avatar">
                         </div>
 
-                        <div class="text-center">
-                            <div>START BOOTSTRAP</div>
-                            <div class="splitter"></div>
+                        <div class="text-center text-light">
+                            <h1>START BOOTSTRAP</h1>
+                            <div class="star_splitter fs-4 my-3">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </div>
+                            <div>
+                                GRAPHIC ARTIST - WEB DEVELOPER - ILLUSTRATOR
+                            </div>
                         </div>
                     </div>
                 </div>
