--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
         <!-- NAVBAR -->
         <nav class="navbar py-3 navbar-expand-lg navbar-dark dark_blue_bg">
             <div class="container">
-              <a class="navbar-brand b4-color" href="#">START BOOTSTRAP</a>
+              <a class="navbar-brand b4-color fw-bold" href="#">START BOOTSTRAP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
                   </li>
                 </ul>
               </div>
@@ -42,17 +42,17 @@
         <section class="jumbotron turquoise_bg">
             <div class="container py-5">
                 <div class="row justify-content-center">
-                    <div class="col-4">
-                        <div class="row justify-content-center">
+                    <div class="col-12 col-md-8 col-lg-5">
+                        <div class="row justify-content-center py-3">
                             <img src="./img/avatar.svg" alt="avatar" class="avatar">
                         </div>
 
                         <div class="text-center text-light">
                             <h1>START BOOTSTRAP</h1>
-                            <div class="star_splitter fs-4 my-3">
-                                <i class="fa fa-star" aria-hidden="true"></i>
+                            <div class="star_splitter fs-4 my-2">
+                                <i class="fa fa-star m-3" aria-hidden="true"></i>
                             </div>
-                            <div>
+                            <div class="fs-5">
                                 GRAPHIC ARTIST - WEB DEVELOPER - ILLUSTRATOR
                             </div>
                         </div>
