--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <!-- NAVBAR -->
         <nav class="navbar py-3 navbar-expand-lg navbar-dark dark_blue_bg">
             <div class="container">
+                <!-- "Logo" -->
               <a class="navbar-brand b4-color fw-bold" href="#">START BOOTSTRAP</a>
+                <!-- Button on media queries smaller than lg -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+              <!-- Right links  -->
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -39,14 +42,17 @@
             </div>
           </nav>
 
+        <!-- JUMBOTRON  -->
         <section class="jumbotron turquoise_bg">
             <div class="container py-5">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-8 col-lg-5">
+                        <!-- Avatar -->
                         <div class="row justify-content-center py-3">
                             <img src="./img/avatar.svg" alt="avatar" class="avatar">
                         </div>
 
+                        <!-- Text content  -->
                         <div class="text-center text-light">
                             <h1>START BOOTSTRAP</h1>
                             <div class="star_splitter fs-4 my-2">
