start main, portfolio section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <!-- Text content  -->
                         <div class="text-center text-light">
                             <h1>START BOOTSTRAP</h1>
-                            <div class="star_splitter fs-4 my-2">
+                            <div class="star_splitter pseudo_white fs-4 my-2">
                                 <i class="fa fa-star m-3" aria-hidden="true"></i>
                             </div>
                             <div class="fs-5">
@@ -70,20 +70,35 @@
 
     <main id="site_main">
     
-        <section class="portfolio">
+        <section class="portfolio py-5">
             <div class="container">
                 <div class="row">
-                    <div class="col title">
-                        Portfolio
+                    <div class="col text-center">
+                        <h2>PORTFOLIO</h2>
+                        <div class="star_splitter pseudo_black fs-4 my-2">
+                            <i class="fa fa-star m-3" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
-                    <div class="col-12 col-md-6 col-lg-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nam porro necessitatibus commodi error a architecto cumque sint laudantium. Voluptatum impedit quae, alias itaque in ea dolor asperiores veniam quia?</div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/cabin.png" alt="cabin illustration">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/cake.png" alt="pie illustration">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/circus.png" alt="circus illustration">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/game.png" alt="joypad illustration">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/safe.png" alt="safe illustration">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 card">
+                        <img src="./img/submarine.png" alt="submarine illustration">
+                    </div>
                 </div>
             </div>
         </section>
