--- a/index.html
+++ b/index.html
@@ -81,23 +81,35 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/cabin.png" alt="cabin illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/cabin.png" alt="cabin illustration">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/cake.png" alt="pie illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/cake.png" alt="cake illustration">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/circus.png" alt="circus illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/circus.png" alt="circus illustration">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/game.png" alt="joypad illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/game.png" alt="joypad illustration">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/safe.png" alt="safe illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/safe.png" alt="safe illustration">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 card">
-                        <img src="./img/submarine.png" alt="submarine illustration">
+                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                        <div class="p_card">
+                            <img src="./img/submarine.png" alt="submarine illustration">
+                        </div>
                     </div>
                 </div>
             </div>
