complete portfolio section| start about section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <!-- Text content  -->
-                        <div class="text-center text-light">
+                        <div class="text-center text-white">
                             <h1>START BOOTSTRAP</h1>
                             <div class="star_splitter pseudo_white fs-4 my-2">
                                 <i class="fa fa-star m-3" aria-hidden="true"></i>
@@ -69,7 +69,7 @@
     </header>
 
     <main id="site_main">
-    
+        <!-- PORTFOLIO -->
         <section class="portfolio py-5">
             <div class="container">
                 <div class="row">
@@ -114,17 +114,23 @@
                 </div>
             </div>
         </section>
-        <section class="about turquoise_bg">
+
+        <!-- ABOUT -->
+        <section class="about turquoise_bg py-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12"></div>
+                    <div class="col-12 text-center">
+                        <h2 class="text-white">ABOUT</h2>
+                    </div>
                     <div class="col-12 col-md-6"></div>
                     <div class="col-12 col-md-6"></div>
                     <div class="col-12"></div>
                 </div>
             </div>
         </section>
-        <section class="contact">
+
+        <!-- CONTACT ME -->
+        <section class="contact py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12"></div>
