complete about section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col text-center">
                         <h2>PORTFOLIO</h2>
-                        <div class="star_splitter pseudo_black fs-4 my-2">
+                        <div class="star_splitter fs-4 my-2">
                             <i class="fa fa-star m-3" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -116,15 +116,28 @@
         </section>
 
         <!-- ABOUT -->
-        <section class="about turquoise_bg py-5">
+        <section class="about turquoise_bg text-white py-5">
             <div class="container">
-                <div class="row">
+                <div class="row ">
+                    <!-- About title -->
                     <div class="col-12 text-center">
-                        <h2 class="text-white">ABOUT</h2>
+                        <h2>ABOUT</h2>
+                        <div class="star_splitter pseudo_white fs-4 my-2">
+                            <i class="fa fa-star m-3" aria-hidden="true"></i>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6"></div>
-                    <div class="col-12 col-md-6"></div>
-                    <div class="col-12"></div>
+                    <!-- About content  -->
+                    <div class="row">
+                        <div class="col-12 col-md-6">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for easy customization.</div>
+                        <div class="col-12 col-md-6">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect strating point!</div>
+                    </div>
+                    <!-- About CTA  -->
+                    <div class="col text-center">
+                        <button type="button" class="btn btn-outline-light my-4">
+                            <i class="fas fa-download"></i>
+                            Download
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
