start contact me section

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <!-- ABOUT -->
         <section class="about turquoise_bg text-white py-5">
             <div class="container">
+                <!-- About title -->
                 <div class="row ">
-                    <!-- About title -->
                     <div class="col-12 text-center">
                         <h2>ABOUT</h2>
                         <div class="star_splitter pseudo_white fs-4 my-2">
@@ -145,8 +145,17 @@
         <!-- CONTACT ME -->
         <section class="contact py-5">
             <div class="container">
+                <!-- Contact me title  -->
                 <div class="row">
-                    <div class="col-12"></div>
+                    <div class="col-12 text-center">
+                        <h2>CONTACT ME</h2>
+                        <div class="star_splitter fs-4 my-2">
+                            <i class="fa fa-star m-3" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- Contact me content  -->
+                <div class="row">
                     <div class="col-12"></div>
                     <div class="col-12"></div>
                 </div>
