add input in "contact me" form and stylize them

--- a/index.html
+++ b/index.html
@@ -154,11 +154,18 @@
                         </div>
                     </div>
                 </div>
-                <!-- Contact me content  -->
-                <div class="row">
-                    <div class="col-12"></div>
-                    <div class="col-12"></div>
-                </div>
+                <!-- form  -->
+                <form class="">
+                        <input type="text" class="form_input form-control" placeholder="Name">
+
+                        <input type="email" class="form_input form-control" placeholder="Email Address">
+
+                        <input type="number" class="form_input form-control" placeholder="Phone Number">
+
+                        <input type="text" class="form_input form-control" placeholder="Phone Number">
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
             </div>
         </section>
     </main>
