complete contact me section

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 
                         <input type="number" class="form_input form-control" placeholder="Phone Number">
 
-                        <input type="text" class="form_input form-control" placeholder="Phone Number">
+                        <textarea type="text" class="form_input form-control" placeholder="Message" rows="10"></textarea>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary turquoise_bg my-3">Send</button>
                   </form>
             </div>
         </section>
