--- a/index.html
+++ b/index.html
@@ -172,18 +172,30 @@
 
     <footer id="site_footer">
         <section class="info blue_bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-4"></div>
-                    <div class="col-12 col-md-4"></div>
-                    <div class="col-12 col-md-4"></div>
+            <div class="container py-5 text-white">
+                <div class="row text-center">
+                    <div class="col-12 col-md-4">
+                        <h3>LOCATION</h3>
+                        <p>2215 John Daniel Drive Clark, MO <br>54243</p>
+                    </div>
+                    <div class="col-12 col-md-4 social">
+                        <h3>AROUND THE WEB</h3>
+                        <i class="fab fa-facebook-f border rounded-circle border-white m-1"></i>
+                        <i class="fab fa-google-plus-g border rounded-circle border-white m-1"></i>
+                        <i class="fab fa-twitter border rounded-circle border-white m-1"></i>
+                        <i class="fab fa-linkedin-in border rounded-circle border-white m-1"></i>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="copyright dark_blue_bg">
-            <div class="container ">
-                <div class="row justify-content-center align-items-center">
-                    Copyright
+        <section class="copyright dark_blue_bg py-5">
+            <div class="container">
+                <div class="row justify-content-center align-items-center text-white">
+                    Copyright &copy; Your Website 2019
                 </div>
             </div>
         </section>
