fix forms on :focus status | tweaks in footer

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                         <input type="email" class="form_input form-control" placeholder="Email Address">
 
-                        <input type="number" class="form_input form-control" placeholder="Phone Number">
+                        <input type="text" class="form_input form-control" placeholder="Phone Number">
 
                         <textarea type="text" class="form_input form-control" placeholder="Message" rows="10"></textarea>
 
@@ -171,21 +171,30 @@
     </main>
 
     <footer id="site_footer">
+        
         <section class="info blue_bg">
             <div class="container py-5 text-white">
                 <div class="row text-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 my-3">
                         <h3>LOCATION</h3>
                         <p>2215 John Daniel Drive Clark, MO <br>54243</p>
                     </div>
-                    <div class="col-12 col-md-4 social">
+                    <div class="col-12 col-md-4 social my-3">
                         <h3>AROUND THE WEB</h3>
-                        <i class="fab fa-facebook-f border rounded-circle border-white m-1"></i>
-                        <i class="fab fa-google-plus-g border rounded-circle border-white m-1"></i>
-                        <i class="fab fa-twitter border rounded-circle border-white m-1"></i>
-                        <i class="fab fa-linkedin-in border rounded-circle border-white m-1"></i>
+                        <a href="#" class="border rounded-circle border-white m-1">
+                            <i class="fab fa-facebook-f "></i>
+                        </a>
+                        <a href="#" class="border rounded-circle border-white m-1">
+                            <i class="fab fa-google-plus-g "></i>
+                        </a>
+                        <a href="#" class="border rounded-circle border-white m-1">
+                            <i class="fab fa-twitter "></i>
+                        </a>
+                        <a href="#" class="border rounded-circle border-white m-1">
+                            <i class="fab fa-linkedin-in "></i>
+                        </a>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 my-3">
                         <h3>ABOUT FREELANCER</h3>
                         <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
                     </div>
