change padding in gutters inside portfolio section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <!-- PORTFOLIO -->
         <section class="portfolio py-5">
             <div class="container">
+                <!-- Title  -->
                 <div class="row">
                     <div class="col text-center">
                         <h2>PORTFOLIO</h2>
@@ -80,33 +81,34 @@
                         </div>
                     </div>
                 </div>
+                <!-- Cards  -->
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/cabin.png" alt="cabin illustration">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/cake.png" alt="cake illustration">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/circus.png" alt="circus illustration">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/game.png" alt="joypad illustration">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/safe.png" alt="safe illustration">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="col-12 col-md-6 col-lg-4 gy-4">
                         <div class="p_card">
                             <img src="./img/submarine.png" alt="submarine illustration">
                         </div>
@@ -171,7 +173,7 @@
     </main>
 
     <footer id="site_footer">
-        
+
         <section class="info blue_bg">
             <div class="container py-5 text-white">
                 <div class="row text-center">
